[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/border/inner_tile.png" type="Texture" id=1]
[ext_resource path="res://entities/Border.gd" type="Script" id=4]
[ext_resource path="res://assets/art/border/ridge_tile.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 80 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 80 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 120, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120, 4 )

[node name="Border" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Outer" type="Node" parent="."]

[node name="OuterLeft" type="ColorRect" parent="Outer"]
anchor_bottom = 1.0
margin_right = 21.0
color = Color( 0.278431, 0.403922, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterRight" type="ColorRect" parent="Outer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
color = Color( 0.278431, 0.403922, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterTop" type="ColorRect" parent="Outer"]
anchor_right = 1.0
margin_bottom = 11.0
color = Color( 0.278431, 0.403922, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterBottom" type="ColorRect" parent="Outer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -11.0
color = Color( 0.278431, 0.403922, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ridge" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
texture = ExtResource( 5 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner" type="NinePatchRect" parent="."]
modulate = Color( 0.2, 0.2, 0.2, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 14.0
margin_right = -24.0
margin_bottom = -14.0
texture = ExtResource( 1 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collision" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionLeft" type="CollisionShape2D" parent="Collision"]
position = Vector2( 12.5, 80 )
shape = SubResource( 1 )

[node name="CollisionRight" type="CollisionShape2D" parent="Collision"]
position = Vector2( 227.5, 80 )
shape = SubResource( 2 )

[node name="CollisionTop" type="CollisionShape2D" parent="Collision"]
position = Vector2( 120, 7.5 )
shape = SubResource( 3 )

[node name="CollisionBottom" type="CollisionShape2D" parent="Collision"]
position = Vector2( 120, 152.5 )
shape = SubResource( 4 )
